- Fixed PROTOCTL description in serverprotocol.html, shouldn't have had a :. Reported by Muisje (#3013).
- Removed all files in networks/, the directory itself may stay for now. Those files were
  old, newest one dating back to 2002 (most of them 2001)... much better if this is handled
  internally by the networks themselves anyway (and then they can put cloak keys in their
  network file too, which they now can't ;p). I wonder if someone actually still used it anyway.
- Added information about extbans to help.conf (/HELPOP ?EXTBANS). Patch from Bock
  (#0003113).
- Made SAPART work for mulitple channels, just like SAJOIN. Reported by Snake and
  SeigHart, patch provided by Bock (#0003064). This also fixes SAPART now being
  announced to all opers globally, just like SAJOIN.
- Finally fixed /RESTART issue on windows for good, should now always restart correctly.
  Patch provided by BuHHunyx and Bock (#0002734).
- Fixed charsys config error message sometimes saying stuff about set::accept-language,
  which should be set::allowed-nickchars (the former does not exist). Reported and
  patch provided by avb (#0003122).
- Fixed compile bug on Solaris due to missing INADDR_NONE, fix provided by Schak
  (#0003125).
- Fixed bug where omitting class::connfreq would result in a huge connection attempt
  flood when autoconnect was enabled. We now set class::connfreq to 60 if it's not
  specified. Reported by Milliways (#0003018).
- c-ares resolver: upgrade to 1.3.2.
- fix for above (c-ares win32 lib)
- Update serverprotocol.html with info for 3.2.6.
- Added donators since 3.2.5
- Setting set::pingpong-warning didn't work, reported by vonitsanet, patch supplied by
  avb (#0003131).
- Tagged chanmode modules as official (oops..)
- Modulized channel mode +G (src/modules/chanmodes/chmode_upG.c)
- Now actually committed +G (different file, see next) ;)
- Renamed all chanmodule modules:
  +G = wordcensor
  +j = jointhrottle
  +Q = nokicks
  +f = chanflood